tests/zen/errors/overflow.zen
let x = 2147483647
let y = x + 1
print(y)
